<resources>
    <string name="app_name">Gb Weather</string>
    <string name="city_label">City</string>
    <string name="enter_city">Enter city</string>
    <string name="cities_list_title">Cities</string>
    <string name="cities_list_label_name">name</string>
    <string name="cities_list_label_favorite">favorite</string>
    <string name="city_moscow">Moscow</string>
    <string name="city_norilsk">Norilsk</string>
    <string name="city_london">London</string>
    <string name="city_kokshetau">Kokshetau</string>
    <string name="city_resolut">Resolut</string>
    <string name="settings_title">Settings</string>
    <string name="settings_dark_theme">Dark theme</string>
    <string name="temp_scale_label">Temp scale</string>
    <string name="add_info_label">Additional information:</string>
    <string name="wind_label">Wind</string>
    <string name="pressure_label">Pressure</string>
    <string name="humidity_label">Humidity</string>
    <string name="show_weather">show weather</string>
    <string name="not_chosen">not chosen</string>
    <string name="choose">choose</string>
    <string name="not_chosen_alert">Please choose the city</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="selected_city">"Selected city: "</string>
    <string name="apply">Apply</string>
</resources>
